<resources>
    <string name="app_name">WE ARE VALENCIA</string>
    <string name="weare">WE ARE</string>
    <string name="valencia">VALENCIA</string>
    <string name="action_settings">Opciones</string>
    <string name="imageViewDescription">Image for Sliding Menu</string>
    <string name="WeAreValenciaInicio">INICIO</string>
    <string name="vacio"></string>
    <string name="proximamente">Próximamente</string>
    <string name="smMasSobreValencia">MÁS SOBRE VALENCIA</string>
	<string name="smLugares">LUGARES DE INTERÉS</string>
	<string name="smFiestas">FIESTAS POPULARES</string>
	<string name="smMapaVLC">MAPA DE VALENCIA</string>
	<string name="smCC">CENTROS COMERCIALES</string>
	<string name="smRecomendaciones">RECOMENDACIONES</string>
	<string name="mainButton_Eventos">EVENTOS</string>
	<string name="mainButton_SitiosVisitados">SITIOS VISITADOS</string>
	<string name="mainButton_Buscar">BUSCAR</string>
	<string name="mainButton_Descubre">DESCUBRE VALENCIA</string>
	<string name="description_logo_letras">Logo We Are Valencia</string>
	<string name="irGaleria">Ir a la galería</string>
	<string name="cargando">Cargando...</string>
	<string name="optionsMaps">Opciones del mapa</string>
	<string name="mapaNormal">Mapa Normal</string>
	<string name="mapaHibryd">Mapa Hybrido</string>
	<string name="mapaSatelite">Mapa Satélite</string>
	<string name="mapaTerraneo">Mapa Terráneo</string>
	<string name="buscarLugaresDeInteres">Buscar un lugar</string>
	<string name="irAlMapa">Ir al mapa</string>
	<string name="guardarImagen">Guardar imagen</string>
	<string name="establecerFondo">Establecer imagen como...</string>
	<string name="heEstado">He visitado</string>
	<string name="leerMas">Leer más</string>
	<string name="cambioDivisas">Cambio de divisas</string>
	<string name="addresFichaLugaresDeInteres">Dirección</string>
	<string name="priceFichaLugaresDeInteres">Precio</string>
	<string name="horaryFichaLugaresDeInteres">Horario</string>
	<string name="telephoneFichaLugaresDeInteres">Teléfono</string>
	<string name="clock">12:30</string>
	<string name="date">Martes</string>
	<string name="eurIcon">€</string>
	<string name="estoyAqui">Estoy aquí</string>
	<string name="obteniendoDireccion">Obteniendo dirección, espere...</string>
	<string name="volver">Volver</string>
	<string name="calendario">Calendario</string>
	<string name="lugaresDeInteres">LUGARES DE INTERÉS</string>
	<string name="Monumentos">Monumentos</string>
	<string name="lonjaDeLaSeda">Lonja de la Seda</string>
	<string name="LonjaDeLaSedaContent">La Lonja de la Seda de Valencia o Lonja de los Mercaderes
	    es una obra maestra del gótico civil valenciano 
	    situada en el centro histórico de la ciudad de Valencia (España).\n\nDeclarada <b>Patrimonio de la Humanidad</b> por la <b>Unesco</b>, se encuentra 
	    situada en la Plaza del Mercado, número 31, frente a 
	    la Iglesia de los Santos Juanes y del Mercado Central de Valencia.\n\nFue construida entre 1482 y 1548, y su primer constructor fue <b>Pere Compte</b> 
	    entre los años 1483 y 1498 sobre el modelo de la Lonja de Palma de Mallorca, 
	    constituyéndose en un edificio emblemático de la riqueza del 
	    siglo de oro valenciano (siglo XV) y muestra de revolución comercial durante la Baja Edad Media, 
	    del desarrollo social y del prestigio conseguido por la burguesía valenciana.
	</string>
	<string name="lonjaDeLaSedaAddress">Plaza del Mercado, 7.</string>
	<string name="lonjaDeLaSedaPrice">2€, 1€ para grupos, estudiantes, pensionistas, familias numerosas.\n\nGratuita los domingos y festivos.</string>
	<string name="lonjaDeLaSedaHorary">Martes a Sábado, de 10:00 a 14:00 h. y de 16:30 a 20:30 h.\n \nDomingos y festivos, de 10:00 a 15:00 h.\n \n Lunes cerrado.</string>
	<string name="lonjaDeLaSedaTelephone">+34 962 084 153</string>
	<string name="torresDeSerranos">Torres de Serranos</string>
	<string name="torresDeSerranosContent">La <b>Puerta de Serranos</b> (<b>Torres dels Serrans</b> en valenciano) es una de las doce puertas
	     que custodiaban la antigua muralla de la ciudad de Valencia.\n\nSu nombre parece provenir de que están situadas aproximadamente
	      al noroeste del casco antiguo y, por lo tanto, eran la entrada natural que comunicaba con los caminos que iban 
	      a Los Serranos (el camino real de Zaragoza, que confluía en este punto también con el camino real de Barcelona).\n\nNo obstante, existe otra teoría que dice que pudo tomar el nombre de la principal familia que habitaba la calle homónima. 
	      \nEs un gran referente de la ciudad de Valencia y uno de sus monumentos mejor conservados.\nDe la antigua muralla, que se ordenó derribar en 1865 
	      por orden del gobernador de la provincia Cirilo Amorós, nada más quedan estas puertas y las Torres de Quart (posteriores), algunos otros
	      vestigios peor conservados y restos arquelógicos como la Puerta de los Judíos.
	</string>
	<string name="torresDeSerranosAddress">Plaza Fueros, 1.</string>
	<string name="torresDeSerranosPrice">Entrada individual: 2 euros.\nGratuita los domingos y festivos.</string>
	<string name="torresDeSerranosHorary">Desde el 15 de marzo al 15 de octubre:\nMartes a sábado, de 10:00 a 19:00 horas\n
	    Domingo y festivos, de 10:00 a 15:00 horas\n
	    \nDesde el 16 de octubre hasta el 14 de marzo:\nMartes a sábado, de 10:00 a 18:00 horas\n
	    \nDomingo y festivos, de 10:00 a 15:00 horas\n</string>
	<string name="torresDeSerranosTelephone">96 391 90 70</string>
	<string name="torresDeQuart">Torres de Quart</string>
	<string name="torresDeQuartContent">El Portal de Quart, constituye junto al de Serranos, anterior en construcción, el principal 
	    testimonio de los restos de una ciudad amurallada, como lo fue la Valencia medieval.\n\nSe trataba de la puerta que enlazaba con el camino que pasando por Quart se dirigía
	    hacia Castilla, y por tanto constituía una de las principales puertas de acceso
	     a la ciudad, junto con el de Serranos abierto hacia el norte y los desaparecidos
	      de San Vicente hacia el sur y el del Mar, hacia el este y por tanto hacia el Grao.</string>
	<string name="torresDeQuartAddress">Calle Guillem de Castro, 139-149</string>
	<string name="torresDeQuartPrice">Entrada individual: 2 euros.\nDomingos y festivos: gratuito</string>
	<string name="torresDeQuartHorary">Desde el 15 de marzo al 15 de octubre:\nMartes a sábado, de 10:00 a 19:00 horas\n
	    Domingo y festivos, de 10:00 a 15:00 horas\n\nDesde el 16 de octubre hasta el 14 de marzo:\nMartes a sábado, de 10:00 a 18:00 horas\n\nDomingo y festivos, de 10:00 a 15:00 horas
	</string>
	<string name="torresDeQuartTelephone">+34 963 91 20 48</string>
	<string name="mercadoCentral">Mercado Central</string>
	<string name="mercadoCentralContent">El Mercat Central de València se ha caracterizado siempre por la calidad, variedad y frescura de sus productos, así como por el trato atento y personalizado de sus vendedores.\n\nEl carácter innovador y comercial de sus vendedores ha hecho que este Mercado crezca y se supere día a día.\nEn la actualidad es no sólo un importante espacio para la venta de productos frescos, sino también un gran atractivo cultural y turístico tanto para visitantes extranjeros como para los propios valencianos.\n\nEl Mercat Central de València ocupa exactamente una superficie de 8.160 metros, dividida en dos zonas o polígonos; el primero de ellos es irregular, con una superficie de 6.760 metros cuadrados; y el otro, octogonal, destinado a la pescadería, tiene una extensión de 1.400 metros cuadrados. El sótano es de 7.690 metros cuadrados; se dedicó a la subasta del pescado y actualmente se utiliza como aparcamiento.\n\nEl Mercat Central de València agrupa a casi 300 pequeños comerciantes que ocupan 1.219 puestos creados en origen. Es el mayor centro de Europa dedicado a la especialidad de productos frescos; y el primer mercado del mundo que afrontó el reto de la informatización de las ventas y distribución a domicilio, desde el día 2 de octubre de 1996.\n\nEn la actualidad, el Mercat es un importante foco económico en la ciudad de Valencia, tanto por la actividad de los comerciantes como por las numerosas visitas que recibe y actos que se organizan.</string>
	<string name="mercadoCentralAddress">Av Barón Cárcer, s/n</string>
	<string name="mercadoCentralPrice">Varía dependiendo si el servicio es a domicilio.</string>
	<string name="mercadoCentralHorary">Lunes	07:30 – 15:00\nMartes	07:30 – 15:00\nMiércoles	07:30 – 15:00\nJueves	07:30 – 15:00\nViernes	07:30 – 15:00\nSábado	07:30 – 15:00\nDomingo	Cerrado
	</string>
	<string name="mercadoCentralTelephone">+34 963 82 91 00</string>
	<string name="mercadoColon">Mercado de Colón</string>
	<string name="mercadoColonContent">Situado en una de las mayores manzanas del primer ensanche, es una de las piezas mas relevantes del modernismo en Valencia. Su construcción se inició en 1914.\n\nDiseñado por Francisco Mora Berenguer aporta como novedad en este tipo de mercados su carácter abierto, que permite la visión a través del mismo produciendo una agradable sensación de diafanidad y transparencia, perceptible fundamentalmente en sus lados mayores, lo que constituye sin duda un original y apreciable acierto.\n\n
La estructura metálica sobre pilares de fundición está enmarcada por dos potentes testeros de ladrillo, perforados por imponentes arcos, en los que se produce una brillante utilización ornamental de diversos materiales, fundamentalmente la piedra y el mosaico, formando una singular composición.</string>
	<string name="mercadoColonAddress">Calle Jorge Juan, 19</string>
	<string name="mercadoColonPrice">Entrada gratuita</string>
	<string name="mercadoColonHorary">Lunes a Domingo: 07:00 - 13:30 horas.\n\nConsultar horario para cada tienda en específico.</string>
	<string name="mercadoColonTelephone">96 352 54 78</string>
	<string name="cac">Ciudad de las Artes y las Ciencias</string>
	<string name="centroCiudad">Centro de la Ciudad</string>
	<string name="parques">Parques</string>
</resources>