<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_bg_layout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
     android:gravity="bottom">
     
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
		 android:layout_weight="3"
		 android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:gravity="center"
         android:orientation="horizontal" >

	 <ImageView
	     android:id="@+id/logo_letras"
	     android:layout_width="wrap_content"
	     android:layout_height="match_parent"
	     android:contentDescription="@string/description_logo_letras"
	     android:src="@drawable/logo_letras" />
         
     </LinearLayout>

     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
         
	     <LinearLayout 
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_weight="8"
	         android:orientation="horizontal"
	         android:paddingTop="18dp"
	         android:paddingBottom="8dp"
	         android:gravity="center">
	         <Button 
	             android:id="@+id/main_galeria_button"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:padding="13dp"
	             android:background="@drawable/color_state_list_main_buttons"
	             android:drawableTop="@drawable/ic_content_picture"
	             android:drawablePadding="5dp"
	             android:text="@string/mainButton_Galeria"
	             android:textColor="@color/white"/>
	         <Button
	             android:id="@+id/main_sitios_visitados_button"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:padding="13dp"
	             android:background="@drawable/color_state_list_main_buttons"
	             android:drawableTop="@drawable/ic_navigation_accept"
	             android:drawablePadding="5dp"
	             android:text="@string/mainButton_SitiosVisitados"
	             android:textColor="@color/white" />
	         <Button 
	             android:id="@+id/main_buscar_sitio_button"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:padding="13dp"
	             android:background="@drawable/color_state_list_main_buttons"
	             android:drawableTop="@drawable/ic_action_search"
	             android:drawablePadding="5dp"
	             android:text="@string/mainButton_Buscar"
	             android:textColor="@color/white"/>
	     </LinearLayout>

	     <LinearLayout
	         android:layout_width="fill_parent"
	         android:layout_height="fill_parent"
	         android:layout_weight="2"
	         android:paddingLeft="20dp"
	         android:paddingRight="20dp"
	         android:gravity="bottom"
	         android:orientation="horizontal" >

	         <Button 
	             android:id="@+id/main_descubre_button"
	             android:layout_width="fill_parent"
	             android:layout_height="wrap_content"
	             android:background="@drawable/color_state_list_main_buttons"
	             android:drawableLeft="@drawable/ic_navigation_previous_item"
	             android:drawablePadding="5dp"
	             android:textColor="@color/white"
	             android:text="@string/mainButton_Descubre"/>
	         
	     </LinearLayout>
     </LinearLayout>
     
</LinearLayout>