<?xml version="1.0" encoding="UTF-8"?>
<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/DividerListView"
     android:fillViewport="true">
     
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
              <FrameLayout 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
			    <ImageView 
			        android:id="@+id/imageView_Ficha_FP"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:contentDescription="@string/imageViewDescription"
			        android:adjustViewBounds="true"
			        android:src="@drawable/fiestaspopulares_fallas"/>
			    
			    <TextView
			        android:id="@+id/textView_Ficha_FP_titulo"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_gravity="bottom"
			        android:background="@drawable/background_textview_degree"
			        android:gravity="center"
			        android:padding="3dp"
			        android:shadowColor="@color/ContentLugaresDeInteres"
			        android:shadowDx="2"
			        android:shadowDy="2"
			        android:shadowRadius="4"
			        android:text="@string/cargando"
			        android:textColor="@color/white"
			        android:textSize="@dimen/textViewTitleFichaLugaresDeInteres" />

    		</FrameLayout>
		</LinearLayout>
        
       <LinearLayout 
		    android:id="@+id/button_ficha_FP_content"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:layout_marginTop="5dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginLeft="10dp"
		    android:background="@drawable/background_tarjeta">

           <TextView
               android:id="@+id/textView_Content_FP_OnlyText"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:padding="10dp"
               android:text="@string/cargando"
               android:textColor="@color/contentLugaresDeInteresFicha"
               android:textSize="@dimen/textViewContentFicha" />
			
		</LinearLayout>
		<LinearLayout 
			   android:id="@+id/button_ficha_lugaresdeinteres_price"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
			   android:layout_marginLeft="10dp"
			   android:layout_marginRight="10dp"
			   android:layout_marginTop="5dp"
			   android:layout_marginBottom="5dp"
               android:gravity="center"
               android:background="@drawable/background_tarjeta">
				 <LinearLayout
			       android:layout_width="fill_parent"
			       android:layout_height="wrap_content"
			       android:layout_weight="2"
			       android:orientation="vertical" >
		           <TextView
		               android:id="@+id/textView_ficha_FP_calendar"
		               android:layout_width="fill_parent"
		               android:layout_height="wrap_content"
		               android:layout_weight="8"
		               android:padding="10dp"
		               android:text="@string/calendario"
		               android:textColor="@color/highLineFichaContent"
		               android:textSize="@dimen/textViewFichaLista" />
					<View  
					    android:layout_marginLeft="10dp"
					    android:layout_marginRight="10dp"
					    android:layout_width="fill_parent"
		                android:layout_height="3dp"
					    android:background="@drawable/background_line_item" />	
				    <TextView 
				        android:id="@+id/textView_ficha_FP_calendar_content"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:layout_weight="3"
		                android:padding="10dp"
					    android:text="@string/cargando"
					    android:textColor="@color/contentLugaresDeInteresFicha"
					    android:textSize="@dimen/textViewFichaLista"  />
				 </LinearLayout>
				 
			</LinearLayout>
			<LinearLayout 
               		android:id="@+id/button_fiestaspopulares_ficha_volver"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginLeft="10dp"
				    android:layout_marginRight="10dp"
				    android:layout_marginTop="5dp"
				    android:layout_marginBottom="5dp"
				    android:orientation="horizontal"
				    android:gravity="center"
				    android:background="@drawable/color_state_list_ir_mapa_layout">
					<TextView 
					    android:id="@+id/textView_ficha_button_Layout_Text"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:gravity="center"
					    android:text="@string/volver"
					    android:padding="10dp"
					    android:textColor="@drawable/color_state_list_text_buttons_direccion_ficha"
					    android:textSize="@dimen/textViewLeerMasFicha"/>
		   </LinearLayout>
    </LinearLayout> 
    
</ScrollView>